package domotix.view;
import java.io.InputStream;
import java.io.PrintStream;
import java.util.*;
public class InputDati 
{
	  public static InputStream in = System.in;
	  public static PrintStream out = System.out;
	  private static Scanner lettore = creaScanner();

//	  private static final String PUNTO_NON_VIRGOLA = "  Ad esempio per i numeri decimali si usa il . anziche' la virgola. ";
//	  private static final String INVIO_PER_CONTINUARE = "(Premi Invio per continuare: ";
	  private final static String ERRORE_FORMATO = "Attenzione: il dato inserito non e' nel formato corretto" ;
	  private final static String ERRORE_MINIMO= "Attenzione: e' richiesto un valore maggiore o uguale a ";
	  private final static String ERRORE_STRINGA_VUOTA= "Attenzione: non hai inserito alcun carattere";
	  private final static String ERRORE_MASSIMO= "Attenzione: e' richiesto un valore minore o uguale a ";
	  private final static String MESSAGGIO_AMMISSIBILI= "Attenzione: i caratteri ammissibili sono: ";

	  private final static char RISPOSTA_SI='S';
	  private final static char RISPOSTA_NO='N';

	  public static void setIn(InputStream in) {
		InputDati.in = in;
		InputDati.lettore = creaScanner();
	  }

	  public static void setOut(PrintStream out) {
		InputDati.out = out;
	  }

	private static Scanner creaScanner ()
	  {
	   Scanner creato = new Scanner(in);
	   creato.useDelimiter(System.getProperty("line.separator"));
	   return creato;
	  }

    private static void stampaMessaggio(String messaggio) {
        out.print(messaggio + " ");
    }
	  
	  public static String leggiStringa (String messaggio)
	  {
		  stampaMessaggio(messaggio);
		  return lettore.nextLine();
	  }
	  
	  public static String leggiStringaNonVuota(String messaggio)
	  {
	   boolean finito=false;
	   String lettura = null;
	   do
	   {
		 lettura = leggiStringa(messaggio);
		 lettura = lettura.trim();
		 if (lettura.length() > 0)
		  finito=true;
		 else
		  out.println(ERRORE_STRINGA_VUOTA);
	   } while (!finito);
	   
	   return lettura;
	  }
	  
	  public static char leggiChar (String messaggio)
	  {
	   boolean finito = false;
	   char valoreLetto = '\0';
	   do
	    {
	     stampaMessaggio(messaggio);
	     String lettura = lettore.nextLine();
	     if (lettura.length() > 0)
	      {
	       valoreLetto = lettura.charAt(0);
	       finito = true;
	      }
	     else
	      {
	       out.println(ERRORE_STRINGA_VUOTA);
	      }
	    } while (!finito);
	   return valoreLetto;
	  }
	  
	  public static char leggiUpperChar (String messaggio, String ammissibili)
	  {
	   boolean finito = false;
	   char valoreLetto = '\0';
	   do
	   {
	    valoreLetto = leggiChar(messaggio);
	    valoreLetto = Character.toUpperCase(valoreLetto);
	    if (ammissibili.indexOf(valoreLetto) != -1)
		 finito  = true;
	    else
	     out.println(MESSAGGIO_AMMISSIBILI + ammissibili);
	   } while (!finito);
	   return valoreLetto;
	  }
	  
	  
	  public static int leggiIntero (String messaggio)
	  {
	   boolean finito = false;
	   int valoreLetto = 0;
	   do
	    {
	     stampaMessaggio(messaggio);
	     try
	      {
	       valoreLetto = Integer.parseInt(lettore.nextLine());
	       finito = true;
	      }
	     catch (InputMismatchException | NumberFormatException e)
	      {
	       out.println(ERRORE_FORMATO);
	       String daButtare = lettore.nextLine();
	      }
	    } while (!finito);
	   return valoreLetto;
	  }

	  public static int leggiInteroPositivo(String messaggio)
	  {
		  return leggiInteroConMinimo(messaggio,1);
	  }
	  
	  public static int leggiInteroNonNegativo(String messaggio)
	  {
		  return leggiInteroConMinimo(messaggio,0);
	  }
	  
	  
	  public static int leggiInteroConMinimo(String messaggio, int minimo)
	  {
	   boolean finito = false;
	   int valoreLetto = 0;
	   do
	    {
	     valoreLetto = leggiIntero(messaggio);
	     if (valoreLetto >= minimo)
	      finito = true;
	     else
	      out.println(ERRORE_MINIMO + minimo);
	    } while (!finito);
	     
	   return valoreLetto;
	  }

	  public static int leggiIntero(String messaggio, int minimo, int massimo)
	  {
	   boolean finito = false;
	   int valoreLetto = 0;
	   do
	    {
	     valoreLetto = leggiIntero(messaggio);
	     if (valoreLetto >= minimo && valoreLetto<= massimo)
	      finito = true;
	     else
	      if (valoreLetto < minimo)
	         out.println(ERRORE_MINIMO + minimo);
	      else
	    	 out.println(ERRORE_MASSIMO + massimo);
	    } while (!finito);
	     
	   return valoreLetto;
	  }

	  
	  public static double leggiDouble (String messaggio)
	  {
	   boolean finito = false;
	   double valoreLetto = 0;
	   do
	    {
	     stampaMessaggio(messaggio);
	     try
	      {
	       valoreLetto = Double.parseDouble(lettore.nextLine());
	       finito = true;
	      }
	     catch (InputMismatchException | NumberFormatException e)
	      {
	       out.println(ERRORE_FORMATO);
	       String daButtare = lettore.nextLine();
	      }
	    } while (!finito);
	   return valoreLetto;
	  }
	 
	  public static double leggiDoubleConMinimo (String messaggio, double minimo)
	  {
	   boolean finito = false;
	   double valoreLetto = 0;
	   do
	    {
	     valoreLetto = leggiDouble(messaggio);
	     if (valoreLetto >= minimo)
	      finito = true;
	     else
	      out.println(ERRORE_MINIMO + minimo);
	    } while (!finito);
	     
	   return valoreLetto;
	  }

	  
	  public static boolean yesOrNo(String messaggio)
	  {
		  String mioMessaggio = messaggio + "("+RISPOSTA_SI+"/"+RISPOSTA_NO+")";
		  char valoreLetto = leggiUpperChar(mioMessaggio,String.valueOf(RISPOSTA_SI)+String.valueOf(RISPOSTA_NO));
		  
		  if (valoreLetto == RISPOSTA_SI)
			return true;
		  else
			return false;
	  }

}
