@startuml

title __DOMOTIX > VIEW's Class Diagram__\n

namespace src.domotix.view {

    class src.domotix.view.InputDati {
        {static} - stampaMessaggio()
    }

    class src.domotix.view.MyMenu {
    }

    namespace menus {
    }

}


src.domotix.view.MyMenu --> src.domotix.view.InputDati
src.domotix.view.menus --> src.domotix.view.MyMenu


@enduml
